# mini-realtime-server-rs

./: Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: ci.yaml
protobuf/: app.proto
src/: actor.rs  config.rs  entity.rs  lib.rs  main.rs  network_protocol.rs  protobuf.rs
src/actor/: event.rs  player.rs  room.rs
src/entity/: player.rs  room.rs
src/network_protocol/: grpc.rs  server.rs  tcp.rs  websocket.rs
tests/: e2e.rs
tests/common/: grpc.rs  mod.rs  scenario.rs  tcp.rs  websocket.rs
