[package]
name = "mini-realtime-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["yoshd <yoshd.develop@gmail.com>"]
readme = "README.md"

[[bin]]
name = "mini-realtime-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.56"
bytes = "1.2.1"
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = "0.3"
h2 = "0.3"
log = "0.4.0"
once_cell = "1.13.0"
prost = "0.11.0"
thiserror = "1.0"
tokio = { version = "1.17", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.18"
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.1"
tokio-util = { version = "0.7.3", features = ["full"] }
tonic = { version = "0.8.0", features = ["tls"] }
warp = { version = "0.3", features = ["tls"] }
jsonwebtoken = "8"
serde = {version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8.0"

[dev-dependencies]
async-stream = "0.3.3"
uuid = { version = "1.1.2", features = ["v4"] }
